# ValidUPC

./: .gitignore  LICENSE  dockerfile  pyproject.toml  readme.md  requirements.txt
ValidUPC/: UPC.py  __main__.py
tests/: test.csv  test_check_digit.py
